# EGNN-Binding-Affinity-Prediction

./: .gitignore  README.md  count_samples.py  dry_run_tcr_pmhc_dataset.csv  dry_run_tcr_pmhc_dataset_failures.csv  generate_tcr_pmhc_dataset.py  interface_utils.py  pyproject.toml  requirements.txt  run_pr2_dryrun.sh  synthetic_ppi_dataset.py
.devcontainer/: init-firewall.sh
FoldX Synthetic Dataset Generation/: Dockerfile  generate_tcr_pmhc_dataset.py
Rosetta ddG Synthetic Dataset Generation /: .dockerignore  Dockerfile  pyproject.toml
rosetta_flex/: README.md  ddG_backrub.xml  make_mutfiles.py  merge_results.py  run_flex_ddg.py  submit_array.sbatch
scripts/: benchmark_blocklist.txt  fetch_stcrdab.py
